--- a/app/assets/stylesheets/layouts/_main-layout.scss
+++ b/app/assets/stylesheets/layouts/_main-layout.scss
@@ -1,6 +1,4 @@
-.body{
 
-}
 .pages-wrapper {
   align-items: stretch;
   display: flex;
@@ -36,4 +34,7 @@
   padding-bottom: 11.5px;
   margin-bottom:30px;
   border-bottom: 1px solid #eeeeee;
+}
+.col{
+  margin-bottom: 32px;
 }
