--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,8 +1,8 @@
 <div class='page-header'>
    <h3>Société <%= @company.name %></h3>
-   <h5>Ici, vous trouverez tous les outils pour :</h5>
+   <h4>Ici, vous trouverez tous les outils pour :</h4>
    <div>
-     <%= image_tag "company-creation-timeline.png", id: "company-creation-timeline-img" %>
+     <%= image_tag "company-creation-timeline.png", id: "creation-timeline-img" %>
    </div>
 </div>
 
@@ -10,12 +10,12 @@
 
   <div class='row'>
 
-    <div class ='col-xs-12 col-sm-8'>
+    <div class ='col col-xs-12 col-sm-8'>
 
       <div class='home-card'>
 
         <div class = 'home-card-header'>
-          Répartition du capital
+          <h5>Répartition du capital</h5>
         </div>
 
         <div class="home-card-body">
@@ -41,11 +41,11 @@
       </div>
     </div>
 
-    <div class ='col-xs-12 col-sm-3'>
+    <div class ='col col-xs-12 col-sm-3'>
       <div class='home-card'>
 
         <div class = 'home-card-header'>
-          Informations
+          <h5>Informations</h5>
         </div>
 
         <div class = "home-card-avatar">
@@ -71,7 +71,7 @@
   </div>
 
   <div class='row'>
-    <div class = 'col-xs-11'>
+    <div class = 'col col-xs-11'>
       <div class = 'home-card-header'>
         Opérations
       </div>
@@ -82,7 +82,7 @@
   </div>
 
   <div class='row'>
-    <div class = 'col-xs-11'>
+    <div class = 'col col-xs-11'>
       <div class = 'home-card-header'>
         Actionnariat
       </div>
