--- a/app/assets/stylesheets/components/_actionbox.scss
+++ b/app/assets/stylesheets/components/_actionbox.scss
@@ -25,12 +25,9 @@
   padding: 4px 8px;
 }
 .mainactionbox .card-title {
-
   border-color:  #fc9600;
   margin: 2px;
   border-bottom: solid 2px #9aa0a8;
-
-
 }
 .mainactionbox .card-text {
   text-align: center;
@@ -39,20 +36,18 @@
 
 }
 .mainactionbox .card-bottom {
-
   border-color:  #fc9600;
   display: flex;
   justify-content: space-around;
   padding: 4px 8px;
 }
 .mainactionbox .btn-superclosing{
-
   padding: 4px 8px;
   width: 72px;
 }
 
 .huge {
-  font-size: 60px !important;
+  font-size: 40px !important;
   font-style: bold;
 }
 
@@ -67,10 +62,6 @@
 
 .club-item {
   display: flex;
-}
-
-.gauche {
-  margin-left: 15px;
 }
 
 .doccard {
@@ -88,9 +79,10 @@
   margin: 20px;
 }
 
-.docs {
+.docs-container {
   display: flex;
-
+  justify-content: start;
+  flex-wrap: wrap;
 }
 
 .doccard:hover {
