--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -7,6 +7,8 @@
   border-radius: 4px;
   box-shadow: 0px 0px 3px rgba(50, 50, 50, 0.4);
   opacity: 0.8;
+  font-size: 14px !important;
+  margin-top: 12px;
 }
 
 .btn-superclosing:hover {
@@ -98,11 +100,11 @@
   margin-bottom: 10px;
   color: #ffac30;
   font-size: 0.8em;
-  font-weight: 700;
+  font-weight: 500;
   text-decoration: none;
   padding: 8px 14px;
   border-radius: 4px;
-  box-shadow: 1px 1px 3px rgba(50, 50, 50, 0.4);
+  box-shadow: 1px 1px 1px rgba(50, 50, 50, 0.18);
 }
 
 .btn-transparent-small:hover {
@@ -112,14 +114,17 @@
 }
 
 .btn-add-company {
-  width:120px;
-  height: 120px;
+  width:100px;
+  height: 100px;
   background: white;
   border-radius:5px;
-  border: solid 1px black;
+  border: solid 2px #2D3D4D;
   white-space:normal;
   text-align:center;
-  color: black;
+  color: #2D3D4D;
+  font-size: 13px;
+  margin-top: 10px;
+  padding: 26px 6px;
   a {
     text-decoration: none;
   }
