--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,13 +2,13 @@
   border-bottom-width: 1px;
   padding: 12px;
   background-color: #fff;
-  border-bottom: 1px solid #e5e9f2;
+  border-bottom: 2px solid #FDBB58;
   text-align: center;
 }
 .home-card-body {
   p {
     font-size: 14px;
-    padding:0px 0px 10px 10px;
+    padding:0px 0px 10px 0px;
     margin: 0px;
   }
 
@@ -29,4 +29,10 @@
     text-decoration: none;
     color: #2C3C4C;
   }
+}
+.operation-card-body {
+  display: flex;
+}
+.operation-card-body-text {
+
 }
