--- a/app/assets/stylesheets/components/_slide.scss
+++ b/app/assets/stylesheets/components/_slide.scss
@@ -2,10 +2,18 @@
   text-align: center;
   position: fixed;
   top: 60px;
-  width: 300px;
-  margin-left: 860px;
+  right: 0px;
+  width: 220px;
   background-color: rgba( 234, 234, 234, 0.8 );
   padding: 10px;
   border-radius: 10px;
+  z-index: 100;
+  h4 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 12px;
+    margin: 0px;
+  }
 }
 
