--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,7 +1,6 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400|Roboto:400");
-@import url("https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:300,400");
-@import url("https://fonts.googleapis.com/css?family=Lato");
+@import url("https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700");
+@import url("https://fonts.googleapis.com/css?family=Barlow:300");
 
 // Define fonts for body and headers
 
@@ -19,26 +18,28 @@
 
 /* --- Fonts --- */
 body {
-  font-family: 'Roboto', sans-serif;
-  padding-bottom: 200px;
+  font-family: 'Nanum Gothic', sans-serif !important;
 }
-
 h1 {
-  font-family: 'Lato', sans-serif;
   font-size: 36px;
-  font-weight: 700;
 }
 
 h2 {
-  font-family: 'Lato', sans-serif;
   font-size: 24px;
   font-weight: normal;
 }
+h3 {
+  margin-bottom: 24px !important;
 
-h5 {
-  font-family: 'Lato', sans-serif;
-  font-size: 26px;
+}
+h4 {
+  font-size: 20px !important;
   font-weight: normal;
+}
+h5 {
+  font-size: 16px !important;
+  font-weight: normal;
+  margin: 0px !important;
 }
 p {
   font-size: 16px;
