--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,6 +4,7 @@
   background-color: #fff;
   border-bottom: 2px solid #FDBB58;
   text-align: center;
+  margin-bottom:22px;
 }
 .home-card-body {
   p {
@@ -11,7 +12,6 @@
     padding:0px 0px 10px 0px;
     margin: 0px;
   }
-
 }
 .home-card-avatar{
   text-align: center;
@@ -21,7 +21,6 @@
     border: 2px solid #2C3C4C;
     border-spacing: 2px;
   }
-
 }
 .home-card-footer{
   text-align: center;
@@ -32,7 +31,4 @@
 }
 .operation-card-body {
   display: flex;
-}
-.operation-card-body-text {
-
 }
