--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -29,8 +29,8 @@ h2 {
   font-weight: normal;
 }
 h3 {
-  margin-bottom: 24px !important;
-
+  margin-bottom: 14px !important;
+  margin-top: 14px !important;
 }
 h4 {
   font-size: 20px !important;
