--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,10 +5,9 @@
 @import "sidebar";
 @import "btn";
 @import "charts";
-
 @import "slide";
 @import "actionbox";
-
 @import "card";
+@import "progressbar";
 
 
