--- a/app/views/captables/new.html.erb
+++ b/app/views/captables/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container form-initialize-captable">
+<div class="container-fluid form-initialize-captable">
   <div class="text-align-center">
     <h1>Initialiser la table de capitalisation</h1>
   </div>
