--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,30 +3,31 @@
 
   <h4>Ici, devenez maître de votre levée de fonds.</h4>
 </div>
-
+<h4> Les 4 étapes SuperClosing : </h4>
 <div class='container-fluid home-step-description'>
 
+
   <div class='card step-card'>
     <div class="step-card-header">
-     Renseignez les infos de votre société
+     Informations relatives à votre société
     </div>
     <div class='step-card-body'>
-      Ci-dessous, répondez à quelques questions pour créer le profil de votre société.
+     Ci-dessous, répondez à quelques questions pour créer le profil de votre société.
     </div>
   </div>
 
   <div class='card step-card'>
     <div class="step-card-header">
-      Renseignez les infos de l'opération
+     Informations relatives à l'opération
     </div>
     <div class='step-card-body'>
-      Une fois votre profil société, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société.
+      Une fois votre profil société créé, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société.
     </div>
   </div>
 
   <div class='card step-card'>
     <div class="step-card-header">
-      Invitez vos investisseurs
+      Invitation de vos investisseurs
     </div>
     <div class='step-card-body'>
       En renseignant simplement l'adresse mail de vos investisseurs et le montant de leur investissement, vous leur donnez accès à votre dataroom personnalisée et aux outils de génération automatique de documents et de signature électronique.
@@ -35,7 +36,7 @@
 
   <div class='card step-card'>
     <div class="step-card-header">
-      Finalisez la levée !
+      Finalisation de la levée de fonds !
     </div>
     <div class='step-card-body'>
       Quand tous les investisseurs ont confirmé leur participation, vous pouvez procéder au closing : génération automatique des documents et signature électronique.
@@ -51,7 +52,7 @@
     <div class ='col-xs-12'>
       <div class='home-card'>
         <div class = 'home-card-header'>
-          <h3>Vos sociétés</h3>
+          <h4>Vos sociétés</h4>
         </div>
 
         <div class="home-card-body">
