--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,15 +1,21 @@
+.home-card{
+    background-color: #fff;
+  }
+
 .home-card-header {
   border-bottom-width: 1px;
   padding: 12px;
-  background-color: #fff;
   border-bottom: 2px solid #FDBB58;
   text-align: center;
   margin-bottom:22px;
+  h4 {
+    font-weight:bolder;
+  }
 }
 .home-card-body {
   p {
     font-size: 14px;
-    padding:0px 0px 10px 0px;
+    padding:0px 20px 10px 20px;
     margin: 0px;
   }
 }
