--- a/app/views/d_documents/index.html.erb
+++ b/app/views/d_documents/index.html.erb
@@ -1,11 +1,22 @@
 <h1>Liste des documents dynamiques générés</h1>
 
 <ul>
-  <% @d_documents.each do |d_document| %>
+  <% @other_documents.each do |d_document| %>
     <li>
       <%= link_to d_document.title, d_document_path(d_document) %>
-
     </li>
   <% end %>
 </ul>
 
+<ul>
+  <%# @users.each do |user| %>
+    <%#= link_to "#{user.subscription_bund.title}", d_document_path(user.subscription_bund) %>
+  <%# end %>
+
+  <% @users.each_with_index do |user, i| %>
+    <% subscription_bund = @subscription_bunds[i] %>
+    <li>
+      <%= link_to "#{subscription_bund.title}", d_document_path(subscription_bund, user_id: user) %>
+    </li>
+  <% end %>
+</ul>
