--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -1,12 +1,13 @@
 .btn-superclosing {
   background: #ffac30;
-  color: white;
+  color: #474f58;
   font-weight: 500;
   text-decoration: none;
+  border: 2px solid #ffac30;
   padding: 10px 25px;
   border-radius: 4px;
   box-shadow: 0px 0px 3px rgba(50, 50, 50, 0.4);
-  opacity: 0.8;
+  opacity: 1;
   font-size: 14px !important;
   margin-top: 12px;
 }
