--- a/app/assets/stylesheets/components/_slide.scss
+++ b/app/assets/stylesheets/components/_slide.scss
@@ -4,10 +4,11 @@
   top: 60px;
   right: 0px;
   width: 220px;
-  background-color: rgba( 234, 234, 234, 0.8 );
+  background-color: #2c3c4c;
   padding: 10px;
   border-radius: 10px;
   z-index: 100;
+  color: white;
   h4 {
     font-size: 20px;
   }
