--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -111,7 +111,7 @@
             <% end %>
 
             <div class="graph">
-            <canvas id="myChart" data-share="<%= @company.number_of_shares %>-<%= @shareholders.first[1] %> " data-label= "<%= User.find(1).first_name %>">
+            <canvas id="myChart" data-share="<%= @company.number_of_shares %>-<%= @shareholders.first[1] %> " data-label= " ">
             </canvas>
             </div>
           </div>
