--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -21,11 +21,11 @@
 .btn-landing-signup {
   background: #ffac30;
   color: white;
-  font-weight: 700;
+  font-weight: 500;
   text-decoration: none;
-  padding: 15px 25px;
+  padding: 10px 24px;
   border-radius: 6px;
-  box-shadow: 1px 1px 3px rgba(50, 50, 50, 0.4);
+  box-shadow:2px 2px 2px 0px rgba(50, 50, 50, 0.22);
   position: relative;
   bottom: 24px;
 }
