--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -27,7 +27,9 @@ body {
 }
 
 #superclosing-landing-logo{
-  height: 160px;
+  max-width: 900px;
+  width: 100%;
+  height: auto;
   margin-bottom: 40px;
 }
 
@@ -35,8 +37,9 @@ body {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  background: #2D3D4D;
 }
 
 .sc-landing-feature {
@@ -46,6 +49,7 @@ body {
   width: 380px;
   height: 290px;
   background: #b5aa9a4d;
+  color:#eee;
   border-radius: 4px;
   & i {
     font-size: 48px;
@@ -69,7 +73,7 @@ body {
 }
 
 .landing-footer {
-  background: #b5aa9a4d;
+  background: #2D3D4D;
   display: flex;
   align-items: center;
   justify-content: flex-end;
