--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -4,43 +4,48 @@
   <h4>Ici, devenez maître de votre levée de fonds.</h4>
 </div>
 
-<div class='container-fluid home-step-description'>
-
-  <div class='card step-card'>
-    <div class="step-card-header">
-     Renseignez les infos de votre société
+<div class='home-step-description'>
+  <div class='home-steps-header'>
+    <h3>LES 4 ETAPES D'UN SUPERCLOSING REUSSI</h3>
+  </div>
+  <div class='container-fluid home-steps'>
+    <div class='card step-card'>
+      <div class="step-card-header">
+       Renseignez les infos de votre société
+      </div>
+      <div class='step-card-body'>
+        Ci-dessous, répondez à quelques questions pour créer le profil de votre société.
+      </div>
     </div>
-    <div class='step-card-body'>
-      Ci-dessous, répondez à quelques questions pour créer le profil de votre société.
+
+    <div class='card step-card'>
+      <div class="step-card-header">
+        Renseignez les infos de l'opération
+      </div>
+      <div class='step-card-body'>
+        Une fois votre profil société, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société.
+      </div>
+    </div>
+
+    <div class='card step-card'>
+      <div class="step-card-header">
+        Invitez vos investisseurs
+      </div>
+      <div class='step-card-body'>
+        En renseignant simplement l'adresse mail de vos investisseurs et le montant de leur investissement, vous leur donnez accès à votre dataroom personnalisée et aux outils de génération automatique de documents et de signature électronique.
+      </div>
+    </div>
+
+    <div class='card step-card'>
+      <div class="step-card-header">
+        Finalisez la levée !
+      </div>
+      <div class='step-card-body'>
+        Quand tous les investisseurs ont confirmé leur participation, vous pouvez procéder au closing : génération automatique des documents et signature électronique.
+      </div>
     </div>
   </div>
 
-  <div class='card step-card'>
-    <div class="step-card-header">
-      Renseignez les infos de l'opération
-    </div>
-    <div class='step-card-body'>
-      Une fois votre profil société, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société.
-    </div>
-  </div>
-
-  <div class='card step-card'>
-    <div class="step-card-header">
-      Invitez vos investisseurs
-    </div>
-    <div class='step-card-body'>
-      En renseignant simplement l'adresse mail de vos investisseurs et le montant de leur investissement, vous leur donnez accès à votre dataroom personnalisée et aux outils de génération automatique de documents et de signature électronique.
-    </div>
-  </div>
-
-  <div class='card step-card'>
-    <div class="step-card-header">
-      Finalisez la levée !
-    </div>
-    <div class='step-card-body'>
-      Quand tous les investisseurs ont confirmé leur participation, vous pouvez procéder au closing : génération automatique des documents et signature électronique.
-    </div>
-  </div>
 </div>
 
 
