--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -4,8 +4,8 @@
   <div class="container-fluid progressbar-container">
     <ul class="progressbar progressbar-1">
         <li class="active">Renseignez les informations relatives à votre société</li>
-        <li >Renseignez les informations relatives à votre société</li>
-        <li>Créez une opération</li>
+        <li >Renseignez les informations relatives à votre opération</li>
+        <li>Investisseurs</li>
         <li>Passez aux signatures !</li>
     </ul>
   </div>
