--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -111,8 +111,10 @@
             <% end %>
 
             <div class="graph">
-            <canvas id="myChart" data-share="<%= @company.number_of_shares %>-<%= @shareholders.first[1] %> " data-label= " ">
-            </canvas>
+              <% unless @shareholders.length == 0 %>
+              <canvas id="myChart" data-share="<%= @company.number_of_shares %>-<%= @shareholders.first[1] %> " data-label= " ">
+              </canvas>
+              <% end %>
             </div>
           </div>
         </div>
